# hx

./: .coverage  .dockerignore  .env.example  .env.sample  .gitignore  .gitpod.yml  CLAUDE.md  Dockerfile  GROK_FIXES_SUMMARY.md  Makefile  PRODUCTION_FIX_PLAN.md  README.md  RPL-JSON-output.md  TESTING_GROK_FIXES.md  TEST_UI_INSTRUCTIONS.md  WEL-plan.md  WEL-structure-guide.md  agents.md  database-explain.md  database-schema.md  deploy-post-scaffolding.md  docker-compose.yml  estimate-fix-and-modularlization-plan.md  fast-simplify-tasks.md  fast-simplify.md  faster-processing.md  faster.md  fix_zombies.sh  flow_diagram.md  fly.toml  front-end-next.md  front-end-plan.md  full-user-build-plan.md  gpt5design.md  grok-docs.md  how-full-system-works.md  ingest_plan.sh  launch_ultimate.sh  main.py  monitor-plan.md  (+20 more)
.beads/: beads.base.jsonl  beads.left.jsonl  issues.jsonl
api/: __init__.py  auth.py  billing.py  config.py  database.py  email.py  main.py  schemas.py  usage.py
cohort/: claims.txt
configs/: providers.example.yaml  providers.yaml  rpl_fast.yaml
documentation/: DEPLOYMENT_STEPS.md  K-R-T-optimize.md  PR_BODY.md  README.md  STATS_SPEC.md  aggregation.md  auto_rpl.md  codex-explanatoin-rpl.md  codex-prev-agentsmd-summary.md  configuration.md  database-schema.md  definitions.md  deploy-post-scaffolding.md  elon-how-it-works.md  elon-map.md  faster-processing.md  flow_diagram.md  flow_new.md  full-user-build-plan.md  grok-integration.md  heretix_rpl_notes.md  how-full-system-works.md  how-to-run.md  interpretation_guide.md  monitor-components-production.md  monitor-plan.md  my_noted.md  my_notes.md  notes.md  optimize-simplify-output.md  output-review.md  output_anatomy.md  phase_1_testing.md  production-database-migration.md  production-database-plan.md  production-database-schema-explained.md  production_explained.md  prompt_plan.md  prompt_training.md  provider-config.md  (+9 more)
examples/: interpretation.md  monitor_snapshot.jsonl
heretix/: aggregate.py  artifacts.py  bias.py  cache.py  cli.py  config.py  constants.py  explanations.py  explanations_llm.py  finalizer.py  metrics.py  pipeline.py  profiles.py  ratelimit.py  reasoning_llm.py  rpl.py  sampler.py  seed.py  simple_expl.py  storage.py  telemetry.py  types.py  verdicts.py
heretix_api/: __init__.py  bias_fast.py  fuse.py  routes_checks.py
heretix_promptstudio/: README.md  apply.py  cli.py  constraints.py  evaluate.py  explain.py  propose.py
heretix_rpl/: aggregation.py  cli.py  config.py  explainer.py  heretix_rpl_notes.md  inspect.py  metrics.py  monitor.py  orchestrator.py  (+6 more)
(+278 files in other folders)
