[project]
name = "heretix-rpl"
version = "0.1.0"
description = "Raw Prior Lens evaluator for Heretix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "openai>=1.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0,<7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0,<7.0",
    "pre-commit>=3.0",
]

[project.scripts]
heretix-rpl = "heretix_rpl.cli:main"

[tool.setuptools.packages.find]
include = ["heretix_rpl*"]
exclude = ["runs*", "tests*"]
